--- a/src/app/usuarios/lista/lista.component.html
+++ b/src/app/usuarios/lista/lista.component.html
@@ -1,4 +1,25 @@
-<div class="card-columns">
+<div class="row" *ngIf="loading">
+  <div class="col">
+    <div class="alert alert-info text-center">
+      <i class="fa fa-sync fa-spin fa-2x"></i>
+      <h1>Espere</h1>
+    </div>
+  </div>
+</div>
+
+<div class="row" *ngIf="error">
+  <div class="col">
+    <div class="alert alert-danger text-center">
+      <i class="fa fa-times fa-2x"></i>
+      <h1>Error: {{ error.status }}</h1>
+      <p>{{error.message}}</p>
+      <br><br>
+      {{error.url}}
+    </div>
+  </div>
+</div>
+
+<div class="card-columns" *ngIf="!loading">
 
     <div class="card" *ngFor="let user of users">
       <img [src]="user.avatar" class="card-img-top" alt="...">
